# experiments_with_python

./: README.md  feed_data.json  main.py  pyproject.toml
scripts/001/: search_table.py
scripts/002/: properties_game.py
scripts/004/gemini/: app.py  config.yaml  manage_db.py  readme.md
scripts/004/gemini/templates/: base.html  login.html  page.html
scripts/004/prompt/: 001.txt  config.yaml
scripts/005/: mixins.py
scripts/006/: readme.md  romeo_and_juliet.py
scripts/007/: articles.txt  clean_descriptions.py
scripts/008/: test_dicts.py
scripts/009/: insertion_context.py  insertion_points.py
scripts/010/: alpha.py  charlie.py
scripts/011/: alpha.py  alpha.txt  bravo.py  bravo.txt  charlie.py  delta.py  echo.py
scripts/012/prompts/alpha/: prompt.txt
scripts/012/prompts/bravo/: prompt.txt
scripts/013/: alpha.py  config.yaml  generate_config.py
scripts/014/: alpha.py  bravo.py  charlie.py  readme.md
scripts/015/: alpha.py  bravo.py  charlie.py  delta.py  echo.py  foxtrot.py
scripts/016/: alpha.py  bravo.py
scripts/017/: index.html
scripts/018/: grid_maker_alpha.py  grid_maker_bravo.py  grid_maker_charlie.py  grid_maker_delta.py
scripts/019/: mosaic_maker.py  mosaic_maker_bravo.py
scripts/020/: alpha.py  config.yaml
scripts/021/: alpha.py  bravo.py  rss_client.py
scripts/022/: index.html
scripts/023/: alpha.md
scripts/024/: build_tree.py  input.txt
scripts/025/: log.md
scripts/025/code/000/: readme.md
scripts/025/code/020/: readme.md  summarize_with_streamlit.py
scripts/025/code/021/: article.aux  article.bib  article.tex
(+197 files in other folders)
