[project]
name = "experiments-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "langextract>=1.0.5",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "nicegui>=2.22.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "schemdraw>=0.21",
    "streamlit>=1.49.1",
]
